style: crop Google Drive iframe top header out of bounds to block popout and fix 403 error

--- a/estudiantes/css/tutoriales.css
+++ b/estudiantes/css/tutoriales.css
@@ -727,8 +727,10 @@ header {
 
 .modal-player-wrapper iframe {
   position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
+  top: -46px; /* Shift the top header of Google Drive out of bounds */
+  left: 0;
+  width: 100%;
+  height: calc(100% + 46px); /* Extend height to compensate the vertical shift */
   border: none;
 }
 
